# TBoOP-CN-Translation

./: .gitignore  main.py  pyproject.toml
extract/: ast.py  output.py  translate.py
typst/: back.typ  book1.typ  book2.typ  book3.typ  common.typ  front.typ  main.typ  words.txt
