[project]
name = "manual-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib~=0.18",
    "lxml>=5.3.0",
]

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20241020",
]
